Fixed logos & spacing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container-top">
             <img class="logo-menu" src="images/download (2).png" alt="Menu Icon">
-            <img class="logo-stack" src="images/download.png" alt="Stack Overflow Logo">
+            <img class="logo-stack" src="images/Stack-icon.png" alt="Stack Overflow Logo">
             <p class="logo-name">stack</p>
             <p class="logo-name2">overflow</p>
             <p class="top-items">About</p>
@@ -29,7 +29,7 @@
 
     <body class="background" id="mobile-body"> 
         <div class="logo-container-stackoverflow">
-            <img class="logo-stackoverflow" src="images/download.png" alt="Stack Overflow Logo">
+            <img class="logo-stackoverflow" src="images/Stack-icon.png" alt="Stack Overflow Logo">
         </div>
         
         <div class="logo-container-google">
